Nginx Contoller/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: croconet-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "app.k8s.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simple-api
            port:
              number: 80
